[project]
name = "qube-pm-api-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Elliot Liptrot", email = "elliot.liptrot@stratas.co.uk" }
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
]

[build-system]
    build-backend = "hatchling.build"
    requires = ["hatchling"]

[tool.hatch.build]
    dev-mode-exact = true

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "editables>=0.4.2",
    "pytest>=8.4.2",
]
